Jeff/Albo - Fixing to, cc and bcc label alignment

--- a/web-ui/app/scss/_mixins.scss
+++ b/web-ui/app/scss/_mixins.scss
@@ -176,6 +176,12 @@
     box-sizing: border-box;
     position: relative;
 
+    .recipients-label {
+      padding: 20px 0px 0px 8px;
+      height: 16px;
+      width: 4.333%;
+    }
+
     .recipients-navigation-handler {
       z-index: -1;
       position: absolute;
